tests/ui/parser/attribute-with-no-generics-in-parameter-list.rs
fn foo<#[attr]>() {} //~ ERROR attribute without generic parameters

fn main() {}

// ferrocene-annotations: fls_gvwd0kf72jt
// Attributes
